--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
 		"resolveJsonModule": true,
-		"jsx": "preserve",
+		"jsx": "react-jsx",
 		"strict": true,
 		"strictNullChecks": true,
 		"esModuleInterop": true,
