--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Teleport React components into anywhere into the react-tree.",
   "author": "marimo",
   "license": "MIT",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
@@ -44,12 +45,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.7",
-    "@types/react-test-renderer": "^19.1.0",
     "@vitejs/plugin-react": "^4.5.2",
     "bumpp": "^9.11.1",
+    "jsdom": "^26.1.0",
     "react": "^19.1.0",
-    "react-test-renderer": "^19.1.0",
     "tsup": "8.0.2",
     "typescript": "^5.8.3",
     "unbuild": "^2.0.0",
