--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ci": "CI=true pnpm run typecheck && pnpm run lint && pnpm run test",
     "build": "unbuild",
     "dev": "unbuild --stub",
-    "lint": "biome check --apply .",
+    "lint": "biome check --write .",
     "prepublishOnly": "pnpm build",
     "release": "bumpp && npm publish",
     "test": "vitest",
